# begemotic

./: .env_mongo  README.md  docker-compose.mongo.yml  docker-compose.yml  readme.md
src/: Docker.dockerfile  main.py  pyproject.toml
src/api/: handlers.py
src/api/contracts/: requests.py  responses.py
src/app/repo/: mock.py  mongo.py
src/app/services/: entries.py  facade.py  repo.py
src/app/services/aggregator/: __init__.py  base.py  factory.py  field.py  map.py
src/app/services/aggregator/implementations/: __init__.py  avg.py  max.py  min.py  sum.py
src/app/services/calculator/: __init__.py  base.py  calculator.py  point.py  polygon.py
src/app/services/indexer/: __init__.py  base.py  point.py  polygon.py
src/core/: config.py  mongo.py
src/core/utils/: load_data.py
src/static/: apartments.csv
src/tests/: test_aggregations.py  test_calculators.py  test_indexers.py  test_requests.py
