[tool.poetry]
name = "begemotic"
version = "0.1.0"
description = ""
authors = ["Vitaly <mr.peunov@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.87.0"
uvicorn = "^0.19.0"
h3 = "^3"
geojson-pydantic = "^0.4.3"
loguru = "^0.6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
